@@ -1,7 +1,7 @@
 dnl Process this file with autoconf to produce a configure script.
 AC_INIT(src/gtetrinet.c)
 
-AM_INIT_AUTOMAKE(gtetrinet, 0.4.1)
+AM_INIT_AUTOMAKE(gtetrinet, 0.5pre0)
 
 AC_PROG_CC
 
